Fixing video playback on mobile

--- a/src/app/components/events/events.component.css
+++ b/src/app/components/events/events.component.css
@@ -366,6 +366,7 @@ input{
 	margin: auto;
 	float: none;
 	margin-bottom: 26px;
+	z-index: 123123123;
 }
 
 .gallerypics img{
@@ -589,8 +590,6 @@ input{
 	.sponLogo2 img {
 		max-width: 100%;
 	}
-
-
 
 }
 
